# trakteer-dev

./: LICENSE  Makefile  README.md  _pYtest_.py  dev-requirements.txt  pyproject.toml  pytest.py  requirements.txt  setup.py  tox.ini
.github/workflows/: autofix.yml  main.yml  pypi.yml  python-app.yml
examples/: example.py
src/trakteer_dev/: __init__.py  _client.py  _data_types.py  _exception.py  _logger.py
src/trakteerdonate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trakteer_dev/: __init__.py  _client.py  _data_types.py  _exception.py  _logging.py
