[build-system]
requires = ["setuptools>=73.0", "wheel", "rich"]
build-backend = "setuptools.build_meta"

[project]
name = "trakteer-dev"
version = "0.1.0"
description = "Nurutin si Xenn aja ini mah .."
authors = [
    {name = "Lucifer", email = "lucifer@example.com"}
]
dependencies = [
    "requests>=2.27.0",
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["trakteer_dev"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
testpaths = ["tests"]
